src/test/RedefinedSymbol2/RedefinedSymbol2.expected
error: RedefinedSymbol2.panda:4:5: invalid redefinition of symbol 'length'
1 error
