src/test/RedefinedSymbol2/RedefinedSymbol2.panda
class RedefinedSymbol2 {
    var length:Int := 5

    function length():Int {
        return length
    }
}
